<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/header"
        android:text="@string/headerText"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:ems="12"
        android:hint="@string/inputText"
        android:inputType="text"
        android:textColor="@color/red"
        android:textStyle="bold|italic"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/buttonBackground"
        android:fontFamily="@font/myfont"
        android:text="@string/pressMe"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:checked="true"
        android:text="@string/switchMe"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="30sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:checked="true"
        android:text="@string/choiсe"
        android:textSize="30sp" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/abc"
        android:text="@string/togglebutton"
        android:textOff="@string/toggleButtonOff"
        android:textOn="@string/toggleButtonOn"
        android:textSize="60sp" />
</LinearLayout>